--- a/templates/register.html
+++ b/templates/register.html
@@ -53,9 +53,7 @@
         </div>
     
     <button class="button is-primary" onclick="user_register()" id='button_end_2'>회원가입</button>
-    <button class="button is-primary" onclick="user_register()" id='button_end'>
-      <a href="#">뒤로가기</a>
-    </button>
+    <a class="button is-primary" onclick="user_register()" id='button_end'>뒤로가기</a>
 
 
   </div>
