--- a/static/register.css
+++ b/static/register.css
@@ -11,11 +11,13 @@ body {
 a {
   text-decoration: none;
   color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 a:hover {
   color: #23a6d5;
-  cursor: alias;
 }
 
 @keyframes gradient {
@@ -75,7 +77,7 @@ a:hover {
 }
 
 .form-control {
-  width: 210px;
+  width: 230px;
   height: 35px;
   background-color: rgba(0, 0, 0, 0);
   border: none;
@@ -94,17 +96,19 @@ a:hover {
 }
 
 .form-control:hover {
-  width: 220px;
+  width: 210px;
   outline: none;
   border-bottom: 1px solid #ffffff;
   transition: 0.35s;
+  background-color:rgba(0, 0, 0, 0);
 }
 
 .form-control:focus {
-  width: 240px;
+  width: 190px;
   outline: none;
   border-bottom: 1px solid #ffffff;
   transition: 0.35s;
+  background-color:rgba(0, 0, 0, 0);
 }
 
 .button {
@@ -129,6 +133,7 @@ a:hover {
   color: #23a6d5;
   background-color:rgba(255, 255, 255, 1);
   transition: 0.3s;
+  outline: none;
 }
 
 #button_one{
