--- a/templates/register.html
+++ b/templates/register.html
@@ -53,8 +53,7 @@
         </div>
     
     <button class="button is-primary" onclick="user_register()" id='button_end_2'>회원가입</button>
-    <a class="button is-primary" onclick="user_register()" id='button_end'>뒤로가기</a>
-
+    <a href="http://lavapies.shop" class="button is-primary" id='button_end'>뒤로가기</a>
 
   </div>
 </body>
