like버튼 반응,은메달,다크모드

--- a/static/style.css
+++ b/static/style.css
@@ -301,6 +301,13 @@
   background-color: #3ea6ff;
   transition: 0.35s;
 }
+.likeBtn_color {
+  color: #3ea6ff;
+}
+.unlikeBtn_color {
+  color: #cccccc;
+}
+
 .user_comment_send {
   width: 90px;
   height: 40px;
