--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
         />
       </div>
       <div class="twinkle" id="twinkle">
-        <i class="far fa-moon uuu"></i>
+        <i class="far fa-moon"></i>
       </div>
       <input type="button" class="withdrawal" id="signout" value="회원탈퇴" />
       <input type="button" class="logout_button" id="logout" value="로그아웃" />
@@ -100,5 +100,6 @@
     <script defer src="{{ url_for('static', filename='video.js') }}"></script>
     <script src="{{ url_for('static', filename='ranking.js') }}"></script>
     <script src="{{ url_for('static', filename='logout_signout.js') }}"></script>
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
   </body>
 </html>
