--- a/static/login.css
+++ b/static/login.css
@@ -31,6 +31,20 @@ body {
   flex-direction: column;
   border-radius: 30px;
   box-shadow: 0px 8px 20px rgba(0, 0, 0, 0.4);
+
+  animation: fadein 1.25s;
+  -moz-animation: fadein 1.25s; /* Firefox */
+  -webkit-animation: fadein 1.25s; /* Safari and Chrome */
+  -o-animation: fadein 1.25s; /* Opera */
+}
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 #login_contain {
