--- a/templates/index.html
+++ b/templates/index.html
@@ -5,30 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--favicon-->
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/static/commend/favicon.ico"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/static/commend/favicon.ico"/>
     <!--fontawesome-->
-    <link
-      rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-      crossorigin="anonymous"
-    />
-    <!--java script-->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!--reset.css-->
     <link rel="stylesheet" href="/static/reset.css" />
     <!--style.css-->
     <link rel="stylesheet" href="/static/style.css" />
-    <!--java script-->
+
     <title>분노의 투기장 - ARENA of ANGER</title>
+    <!--java script-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
   </head>
   <body>
-    <!--금동 매니저님께-->
 
     <!--헤더 test-->
     <div class="header">
