--- a/templates/login.html
+++ b/templates/login.html
@@ -5,26 +5,16 @@
     <title>분노의 투기장 - 로그인 페이지</title>
 
     <!--favicon-->
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="/static/commend/favicon.ico"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="/static/commend/favicon.ico"/>
 
+    <!--reset.css-->
+    <link rel="stylesheet" href="/static/reset.css">
+    <!--login.css-->
+    <link rel="stylesheet" href="/static/login.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-
-    <link
-    rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"crossorigin="anonymous"/>
-
-    <link rel="stylesheet" href="/static/reset.css">
-    <link rel="stylesheet" href="/static/login.css">
-
-    <script type="text/javascript" src="/static/login.js">
-
-    </script>
-
+    <script type="text/javascript" src="/static/login.js"></script>
 </head>
 
 <body>
