--- a/templates/register.html
+++ b/templates/register.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>분노의 투기장 - 회원가입 페이지</title>
     <!--favicon-->
-    <link
-    rel="shortcut icon"
-    type="image/x-icon"
-    href="/static/commend/favicon.ico"
-    />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-
+    <link rel="shortcut icon" type="image/x-icon" href="/static/commend/favicon.ico"/>
+    <!--reset.css-->
     <link rel="stylesheet" href="/static/reset.css">
+    <!--style.css-->
     <link rel="stylesheet" href="/static/register.css">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
     <script type="text/javascript" src="/static/register.js"></script>
-
 </head>
 <body>
+  <!---->
   <div class="background">
 
     <div id="register_contain">
@@ -30,7 +27,6 @@
         <h4 class="hi_text_1">회원 가입 페이지 입니다</h4>
         <p class="hi_text_2">비밀번호는 안전하게 저장되니 걱정하지 마세요 !</p>
       </div>
-
 
         <div class="form-group">
             <label for="exampleInputEmail1"></label>
@@ -56,5 +52,6 @@
     <a href="http://lavapies.shop" class="button is-primary" id='button_end'>뒤로가기</a>
 
   </div>
+
 </body>
 </html>
