--- a/static/register.css
+++ b/static/register.css
@@ -8,7 +8,18 @@ body {
   align-items: center;
   flex-direction: column;
 }
-/*test123*/
+a {
+  text-decoration: none;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+a:hover {
+  color: #23a6d5;
+}
+
 @keyframes gradient {
   0% {
     background-position: 0% 50%;
@@ -22,8 +33,8 @@ body {
 }
 
 .background {
-  width: 24%;
-  height: 60%;
+  width: 25%;
+  height: 75%;
   background-color: rgba(255, 255, 255, 0.4);
   display: flex;
   justify-content: center;
@@ -39,15 +50,15 @@ body {
 }
 
 @keyframes fadein {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+  from {
+      opacity: 0;
+  }
+  to {
+      opacity: 1;
+  }
 }
 
-#login_contain {
+#register_contain {
   width: 100%;
   opacity: 100%;
   z-index: 99;
@@ -55,65 +66,63 @@ body {
 
 .title {
   width: auto;
-  height: 55px;
+  height: 44px;
   background: url(/static/commend/99pro_logo_w.svg);
   background-repeat: no-repeat;
   background-position: center;
-  margin: 38px 0;
+  margin: 10px 0 30px 0;
 }
 
-.field {
+.hi_text_box {
   width: 100%;
   height: auto;
-  display: flex;
-  justify-items: center;
-  align-items: center;
-  flex-direction: column;
-  margin: 8px 0;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  text-align: center;
+  color: #ffffff;
+  font-size: 1rem;
 }
 
-#comeon {
-  margin-bottom: 35px;
+.hi_text_1 {
+  margin-bottom: 10px;
 }
 
-.input{
-  width: 220px;
+.hi_text_3 {
+  margin-bottom: 10px;
+}
+
+.form-control {
+  width: 230px;
   height: 35px;
   background-color: rgba(0, 0, 0, 0);
   border: none;
   color: #ffffff;
   border-bottom: 1px solid #ffffff;
   text-align: center;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
 }
 
-.input:hover {
+.form-control::placeholder{
+  color: #ffffff;
+}
+
+.form-control:hover {
+  width: 210px;
+  outline: none;
+  border-bottom: 1px solid #ffffff;
+  transition: 0.35s;
+  background-color:rgba(0, 0, 0, 0);
+}
+
+.form-control:focus {
   width: 190px;
   outline: none;
   border-bottom: 1px solid #ffffff;
   transition: 0.35s;
-}
-
-
-.input:focus {
-  width: 175px;
-  outline: none;
-  border-bottom: 1px solid #ffffff;
-  transition: 0.35s;
-}
-
-.input::placeholder {
-  color: #ffffff;
-  text-align: center;
-}
-
-.control {
-  width: 100%;
-  height: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  background-color:rgba(0, 0, 0, 0);
 }
 
 .button {
@@ -126,6 +135,7 @@ body {
   font-size: 0.8rem;
   margin-bottom: 18px;
 }
+
 .button:hover {
   color: #23a6d5;
   background-color:rgba(255, 255, 255, 0.65);
@@ -134,8 +144,22 @@ body {
 }
 
 .button:focus {
-  outline: none;
   color: #23a6d5;
   background-color:rgba(255, 255, 255, 1);
   transition: 0.3s;
+  outline: none;
+}
+
+#button_one{
+  width: 130px;
+  height: 32px;
+  margin-bottom: 25px;
+}
+
+#button_end_2{
+  margin-top: 20px;
+}
+
+#button_end {
+  margin-top: 5px;
 }
