--- a/static/style.css
+++ b/static/style.css
@@ -9,7 +9,7 @@
   box-shadow: 0px 3px 20px #f0f0f0;
   background-color: #ffffff;
 }
-/**금동 매니저님께22**/
+
 .logo {
   width: 24.5%;
   height: 32.5px;
@@ -197,7 +197,7 @@
   font-weight: 400;
 }
 .name_text {
-  font-size: 1.7rem;
+  font-size: 1.55rem;
   font-weight: 500;
   margin: 0.5rem 0 0.8rem 0;
 }
@@ -213,9 +213,9 @@
   background-color: green;
 }
 .youtuber_name_text {
-  font-size: 1.2rem;
-  padding-top: 0.2rem;
-  letter-spacing: 1px;
+  font-size: 1.15rem;
+  margin-bottom:8px;
+  font-weight: 600;
 }
 .subscriber_number {
   font-size: 0.8rem;
@@ -301,6 +301,13 @@
   background-color: #3ea6ff;
   transition: 0.35s;
 }
+.likeBtn_color {
+  color: #3ea6ff;
+}
+.unlikeBtn_color {
+  color: #cccccc;
+}
+
 .user_comment_send {
   width: 90px;
   height: 40px;
