--- a/templates/login.html
+++ b/templates/login.html
@@ -2,47 +2,37 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>로그인 페이지</title>
+    <title>분노의 투기장 - 로그인 페이지</title>
+
+    <!--favicon-->
+    <link rel="shortcut icon" type="image/x-icon" href="/static/commend/favicon.ico"/>
+
+    <!--reset.css-->
+    <link rel="stylesheet" href="/static/reset.css">
+    <!--login.css-->
+    <link rel="stylesheet" href="/static/login.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-
-    <link rel="stylesheet" href="/static/reset.css">
-    <link rel="stylesheet" href="/static/login.css">
-
-    <script type="text/javascript" src="/static/login.js">
-
-    </script>
-
 </head>
 
 <body>
 <div class="background">
     <section class="hero is-info" id="login_contain">
-      <div class="hero-body">
         <div class="title"></div>
-      </div>
     </section>
 
     <div class="field">
       <p class="control has-icons-left has-icons-right" id="user_input_id">
-        <input id="input_id" class="input" type="email" placeholder="Email을 입력해주세요">
-        <span class="icon is-small is-left">
-          <i class="fas fa-envelope"></i>
-        </span>
-        <span class="icon is-small is-right">
-          <i class="fas fa-check"></i>
-        </span>
+        <input id="input_id" class="input" type="email" placeholder="✉️ Email을 입력해주세요">
       </p>
     </div>
-    <div class="field">
+    <div class="field" id="comeon">
       <p class="control has-icons-left">
-        <input id="input_pw" class="input" type="password" placeholder="비밀번호를 입력해주세요">
-        <span class="icon is-small is-left">
-          <i class="fas fa-lock"></i>
-        </span>
+        <input id="input_pw" class="input" type="password" placeholder="🔒 비밀번호를 입력해주세요">
       </p>
     </div>
+
     <div class="field">
       <p class="control">
         <button class="button is-success" onclick="login_info()">
@@ -54,6 +44,8 @@
         </button>
       </p>
     </div>
-</div>   
+    <script type="text/javascript" src="/static/login.js"></script>
+
+</div>
 </body>
 </html>
