--- a/templates/register.html
+++ b/templates/register.html
@@ -1,46 +1,57 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>회원가입 페이지</title>
+    <title>분노의 투기장 - 회원가입 페이지</title>
+    <!--favicon-->
+    <link rel="shortcut icon" type="image/x-icon" href="/static/commend/favicon.ico"/>
+    <!--reset.css-->
+    <link rel="stylesheet" href="/static/reset.css">
+    <!--style.css-->
+    <link rel="stylesheet" href="/static/register.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <script type="text/javascript" src="/static/register.js">
-    </script>
-
+    <script type="text/javascript" src="/static/register.js"></script>
 </head>
 <body>
-    <div class="alert alert-success" role="alert">
-      <h4 class="alert-heading">회원 가입 페이지 입니다.</h4>
-      <hr>
-      <p class="mb-0">비밀번호는 안전하게 저장되니 걱정하지 마세요!</p>
+  <!---->
+  <div class="background">
+
+    <div id="register_contain">
+      <div class="title"></div>
     </div>
 
+      <div class="hi_text_box">
+        <p class="hi_text_3">👋</p>
+        <h4 class="hi_text_1">회원 가입 페이지 입니다</h4>
+        <p class="hi_text_2">비밀번호는 안전하게 저장되니 걱정하지 마세요 !</p>
+      </div>
 
-    <div class="form-group">
-        <label for="exampleInputEmail1">이메일 주소</label>
-            <button class="button is-primary" onclick="email_valid_checker()">중복검사</button>
-            <input type="email" class="form-control" id="email-id" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="유효한 이메일을 입력해주세요.">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
         <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
+            <label for="exampleInputEmail1"></label>
+            <input type="email" class="form-control" id="email-id" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="유효한 이메일을 입력해주세요.">
+        </div>
+        <button class="button is-primary" onclick="email_valid_checker()" id="button_one">중복검사</button>
+        <div class="form-group">
+            <label id="sobangcha" for="exampleInputPassword1"></label>
             <input type="password" class="form-control" id="password" id="exampleInputPassword1" placeholder="비밀번호를 입력해주세요.">
         </div>
+
         <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
+            <label id="sobangcha" for="exampleInputPassword1"></label>
             <input type="password" class="form-control" id="password_check" id="exampleInputPassword1" placeholder="비밀번호를 다시 입력해주세요.">
         </div>
+
         <div class="form-group">
-            <label for="exampleInputPassword1">닉네임</label>
+            <label id="sobangcha" for="exampleInputPassword1"></label>
             <input type="text" class="form-control" id="name" id="exampleInputPassword2" placeholder="닉네임을 입력해주세요">
         </div>
-    <button class="button is-primary" onclick="user_register()">회원가입</button>
 
+    <button class="button is-primary" onclick="user_register()" id='button_end_2'>회원가입</button>
+    <a href="http://lavapies.shop" class="button is-primary" id='button_end'>뒤로가기</a>
+
+  </div>
 
 </body>
 </html>
